--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         ></video>
         <a-video
           src="#mivideo"
-          position="0 0.1 -0.2"
+          position="0 0.1 -1.5"
           rotation="-90 0 0"
-          scale="1.3 0.6 1"
+          scale="3 1 1"
         ></a-video>
 
         <script>
@@ -180,17 +180,17 @@
           });
         </script>
         <a-entity
-          position="-0.7 .5 -1.4"
-          rotation="-65.98 -4.56 5.28"
-          scale="0.1 .25 .2"
-          text-geometry="bevelEnabled:true;bevelSize:0.05;bevelThickness:0.05;curveSegments:1;height:0.3;size:1;value: JHON HENRY MATOMA"
-          material="color:blue;sphericalEnvMap:https://cdn.glitch.com/6f8b5a13-fd4d-445d-b9eb-57c735d720ea%2FTextureMap.png?1528781398531"
+          position="-1.5 .1 1.8"
+          rotation="-95 0 0"
+          scale="0.3 .25 .4"
+          text-geometry="bevelEnabled:true;bevelSize:0.05;bevelThickness:0.05;curveSegments:1;height:0.3;size:1.5;value: GUIAR GO"
+          material="color:black;sphericalEnvMap:https://cdn.glitch.com/6f8b5a13-fd4d-445d-b9eb-57c735d720ea%2FTextureMap.png?1528781398531"
         ></a-entity>
 
         <a-box
           scale="1 0.5 1"
           material="src: #profileTexture"
-          position="0 0 -1"
+          position="0 0 0.1"
           radius="2"
           segments-height="84"
         >
@@ -470,22 +470,23 @@
 
         <a-plane
           src="https://cdn.glitch.com/9a62d304-ccdb-4232-95c8-6b75030c36be%2Funnamed.png?v=1615254660190"
-          height="0.6"
+          height="0.4"
           width="1.3"
           color="white"
-          position="0 0 0.45"
+          position="0 0 -0.75"
           rotation="-90 0 0"
         >
         </a-plane>
         <a-text
-          value="\n\nJhon H Matoma\n\nDesarrollado de realidad aumentada en la web (WebAr)\n\n"
-          position="-.6 0.1 0.4"
+          value="\nJhon H Matoma\nIngeniero Informatico\n\nDesarrollador de contenido de realidad \naumentada en la web. \n(WebAr)"
+          position="-.6 0.1 -0.8"
           rotation="-90 0 0"
           height="0.6"
           width="1.3"
           color="black"
         >
         </a-text>
+        <a-image src="https://cdn.glitch.com/378652e4-5199-40df-b693-544b5216b400%2Flogo.png?v=1615336773973" width="0.2" height="0.2" position=".5 0.1 -0.74" rotation="-90 0 0"></a-image>
       </a-marker>
 
       <a-entity
